<resources>
    <string name="app_name">HW2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distrito">Distrito</string>
    <string name="cidades">Cidades</string>
    <string name="cidade">Cidade</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="label_tmin">Temp. Mínima:</string>
    <string name="label_tmax">Temp. Máxima:</string>
    <string name="label_prob_pre">Chuva:</string>
    <string name="vento">Vento:</string>
</resources>
