<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16sp">

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_tmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/label_tmin"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/textview"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_tmax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/label_tmax"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tmax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/textview"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_chuva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/label_prob_pre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/chuva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:text="@string/textview"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_vento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/vento"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/vento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/textview"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/direcao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_weight="0"
            android:text="@string/textview"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>
